Bug 1703693 - Prefer faces for fonts that can only be named in one way. r=jfkthame

This produces the desired rendering here by effectively "deprioritizing"
faces from fonts that have multiple names.

Your call whether this is a good idea or not, seems reasonable off-hand
to me.

Differential Revision: https://phabricator.services.mozilla.com/D111283